--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -7,7 +7,7 @@
 		</div>
 
 		<nav class="collapse navbar-collapse bs-navbar-collapse">
-		 <div id="navbar" class="navbar-collapse collapse col-md-2 col-md-offset-4">
+		 	<!-- <div id="navbar" class="navbar-collapse collapse col-md-2 col-md-offset-4">
 		      <form class="navbar-form navbar-left" role="search">
 				<div class="input-group">
 			      <input type="text" class="form-control" placeholder="搜索">
@@ -18,13 +18,13 @@
 			      </span>
 			    </div>
 			  </form>
-		    </div>
-		  <p class="navbar-text pull-right">
+		    </div> -->
+		  	<p class="navbar-text pull-right">
 		      <% if current_user %>
-		      	  <span>学生：</span><span><%= current_user.phone%></span> | 
+		      	  <%= link_to("学生：#{current_user.show_name}", my_courses_user_index_path, class: "navbar-link") %> | 
 		          <%= link_to('退出', destroy_user_session_path, :method => :delete, class: "navbar-link") %>
 		      <% elsif current_teacher %>
-		      	  <span>教师：</span><span><%= current_teacher.phone%></span> | 
+		      	  <%= link_to("教师：#{current_teacher.show_name}", my_courses_teachers_path, class: "navbar-link") %> | 
 		          <%= link_to('退出', destroy_teacher_session_path, :method => :delete, class: "navbar-link") %>
 		      <% else %>
 		          <%= link_to('登录', new_session_path(:user), class: "navbar-link") %> | 
