--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -22,9 +22,7 @@
 		  <%= f.input :name %>
 		  <%= f.input :number %>
 		  <%= f.input :position %>
-		  <%= f.input :academy_id, collection: [['请选择系别','']] + Academy.all.pluck(:name,:id), as: :select, include_blank: false %>
-		  <%= f.input :specialty_id, collection: [['请选择专业','']] + @specialties,as: :select, include_blank: false %>
-		  <%= f.association :grade, collection: [['请选择班级','']] + @grades, as: :select, include_blank: false %>
+		  <%= render :partial => "common/common_select", locals: {f: f} %>
 		  <%= f.input :phone, required: false %>
 		  <%= f.input :gender, collection: User::PartnerGender.to_a.reverse_each{|x| x.reverse!}, as: :radio_buttons, wrapper: "horizontal_radio_and_checkboxes", item_wrapper_class: "radio-inline" %>
 		  <%= f.input :signature, as: :text %>
@@ -38,6 +36,25 @@
 		<% end %>
 	  </div>
 	</div>
+
+	 <div class="container div-form div-content" style="display: none;">
+		<%= simple_form_for(:user, url: user_path(current_user.id), wrapper: "horizontal_form", html: { method: :put, multipart: true, class: "form-horizontal" }) do |f| %>
+		  <%= f.input :old_password %>
+		  <%= f.input :password %>
+		  <%= f.input :password_confirmation %>
+		  <%= f.input :phone %>
+		  <%#= f.input :code %>
+
+		  <div class="col-sm-5 col-sm-offset-2">
+			<p class="text-center">
+			  <%= f.submit "确认修改", class: "btn btn-success" %>
+			  <input class="btn btn-danger" type="button" value="取消修改">
+			</p>
+		  </div>
+		<% end %>
+	  </div>
+	</div>
+
   </div>
 
 </div>
