--- a/app/views/common/_lunbo.html.erb
+++ b/app/views/common/_lunbo.html.erb
@@ -9,13 +9,13 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <%= image_tag "home_01.jpg", class: "img-responsive carousel-image", alt: "上海工商职业技术学院"%>
+      <%= image_tag "banner-1.jpg", class: "img-responsive carousel-image", alt: "上海工商职业技术学院"%>
     </div>
     <div class="item">
-      <%= image_tag "home_01.jpg", class: "img-responsive carousel-image", alt: "上海工商职业技术学院"%>
+      <%= image_tag "banner-2.jpg", class: "img-responsive carousel-image", alt: "上海工商职业技术学院"%>
     </div>
     <div class="item">
-      <%= image_tag "home_01.jpg", class: "img-responsive carousel-image", alt: "上海工商职业技术学院"%>
+      <%= image_tag "banner-3.jpg", class: "img-responsive carousel-image", alt: "上海工商职业技术学院"%>
     </div>
   </div>
 </div>
