--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -1,8 +1,8 @@
 <div id="left-bar" class="col-sm-2">
   <ul id="xcui-menu">
     <li>
-      <%= link_to "" do %>
-        <span class="glyphicon glyphicon-home">首页</span>
+      <%= link_to admin_courses_path do %>
+        <span class="glyphicon glyphicon-home">课程列表</span>
       <%end%>
     </li>
     <li>
