add kaminari gem

--- a/app/views/user/questions_answers.html.erb
+++ b/app/views/user/questions_answers.html.erb
@@ -50,6 +50,9 @@
             </div>
           <% end %>
         <% end %>
+        <div class="paginate text-center">
+          <%= paginate @question_comments %>
+        </div>
 	    </div>
       <!-- ###############################我的提问##################### -->
 
