--- a/app/views/user/discuss_center.html.erb
+++ b/app/views/user/discuss_center.html.erb
@@ -70,6 +70,9 @@
           <% end %>
         <% end %>
       </div>
+      <div class="paginate text-center">
+        <%= paginate @comments %>
+      </div>
       <!-- ######################我的评论##################### -->
 
 
