answers page edit

--- a/app/views/user/discuss_center.html.erb
+++ b/app/views/user/discuss_center.html.erb
@@ -55,7 +55,7 @@
                 </div>
               </div>
               <div class="col-sm-2">
-                <table class="table no-border">
+                <table class="table no-border text-muted">
                   <tr align="center">
                     <td class="<%= comment.has_children? ? "text-success" : "text-muted"%>"><%= comment.children.size %></td>
                     <td class="left-border">0</td>
