--- a/app/assets/stylesheets/application/global.css.scss
+++ b/app/assets/stylesheets/application/global.css.scss
@@ -1,5 +1,12 @@
 @import "variable";
 
+/*全局*/
+.wrapper {
+  width: 1200px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
 body {
   background: #ebebeb;
 }
