teacher quesion answers

--- a/app/assets/stylesheets/application/global.css.scss
+++ b/app/assets/stylesheets/application/global.css.scss
@@ -32,3 +32,12 @@ form {
 	color: #fff!important;
 	background: $main-color!important;
 }
+
+
+  .blank {
+    height: 100px;
+    font-size: 30px;
+    text-align:center;//居中 
+    padding: 10px;
+    color: #808080;               
+  }
