--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -747,7 +747,7 @@ body.exams__new {
 /*教师我的课程, 我的班级, 教师介绍, 我的账户*/
 body.teachers__my_courses, body.teachers__my_grades, body.teachers__my_info,
 body.teachers__my_account, body.teachers__upload_course_ware,
-body.teachers__my_questions, body.teachers__my_answers {
+body.teachers__my_questions, body.teachers__my_answers, body.teachers__discuss_center {
   .main-content {
     .teacher-content {
       margin-top: 20px;
