--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,7 @@
  * file per style scope.
  *
  *= require_self
+ *= require mediaelement_rails
+ *= require mediaelement_rails/mejs-skins
  *= require_tree ./application/.
  */
