--- a/app/views/user/my_exams.html.erb
+++ b/app/views/user/my_exams.html.erb
@@ -28,11 +28,12 @@
           <% @complete_exams.each do |exam| %>
             <div class="row my-exams">
               <div class="col-sm-3 ov-hidden">
-                <%= image_tag "my-course.png" %>
+                <%= link_to image_tag("my-course.png"), show_courses_path(exam.try(:sub_course).try(:course).try(:number)) %>
               </div>
               <div class="col-sm-9">
                 <div class="my-exams-desc"> 
-                  <h4><%= exam.try(:sub_course).try(:name)%><br>
+                  <h4>
+                    <%= link_to exam.try(:sub_course).try(:name), show_courses_path(exam.try(:sub_course).try(:course).try(:number)) %><br>
                     <small>
                       <span>考试时间：40分钟</span>
                     </small>
