--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -1,8 +1,20 @@
 <%= form_for([:admin, @course], html: {class: "form-horizontal"}) do |f| %>
   <div class="form-group">
-    <%= f.label :name, '名称', class: 'col-sm-2 control-label' %>
+    <%= f.label :image, '课程展示图', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4">
+      <%= f.file_field :image, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :name, '课程名称', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4">
       <%= f.text_field :name, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :description, '课程描述', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4">
+      <%= f.text_area :description, size: '80x6', class: 'form-control' %>
     </div>
   </div>
   <hr></hr>
