--- a/app/views/teachers/my_questions.html.erb
+++ b/app/views/teachers/my_questions.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :script do %>
-  <%= javascript_include_tag "_teacher_page" %>
+  <%= javascript_include_tag "_teacher_page" , 'data-turbolinks-track' => false%>
 <%end%>
 
 <div class="main-content">
