--- a/app/views/admin/sub_courses/index.html.erb
+++ b/app/views/admin/sub_courses/index.html.erb
@@ -2,12 +2,18 @@
   <li>
   	<a href="#{admin_root_path}">后台</a>
   </li>
-  <li class="active">课程列表</li>
+  <li>
+    <a href="#{admin_courses_path}">课程列表</a>
+  </li>
+  <li>
+    <a href="#"><%= @course.id %></a>
+  </li>
+  <li class="active">子课程列表</li>
 <%end%>
 
 <%= content_for :toolbar do %>
   <div class="col-xs-12">
-    <%= link_to new_admin_course_path, class: 'btn btn-success' do %>
+    <%= link_to new_admin_course_sub_course_path(@course), class: 'btn btn-success' do %>
       <span class="glyphicon glyphicon-plus-sign">新建</span>
     <%end%>
   	<div class="col-xs-3 pull-right">
@@ -22,16 +28,14 @@
 <table class="table table-hover table-bordered text-center">
 	<thead>
 		<tr>
-		  <th class="text-center">展示图</th>
 			<th class="text-center">编号</th>
 			<th class="text-center">名称</th>
-			<th class="text-center">描述</th>
-      <th class="text-center">子课程</th>
+      <th class="text-center">附件</th>
 			<th class="text-center" colspan="3">操作</th>
 		</tr>
 	</thead>
 	<tbody>
-		<%= render @courses %>
+		<%= render @sub_courses %>
 	</tbody>
 </table>
-<%= paginate @courses %>
+<%= paginate @sub_courses %>
