--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -788,7 +788,8 @@ body.exams__new, body.exams__show {
 /*教师我的课程, 我的班级, 教师介绍, 我的账户*/
 body.teachers__my_courses, body.teachers__my_grades, body.teachers__my_info,
 body.teachers__my_account, body.teachers__upload_course_ware,
-body.teachers__my_questions, body.teachers__my_answers, body.teachers__discuss_center {
+body.teachers__my_questions, body.teachers__my_answers, body.teachers__discuss_center,
+body.teachers__my_score {
   .main-content {
     .teacher-content {
       margin-top: 20px;
@@ -907,7 +908,26 @@ body.teachers__my_questions, body.teachers__my_answers, body.teachers__discuss_c
           display: none;
         }
       }
+
     }
+    //成绩查询
+    div.search-step {
+      padding: 20px;
+      
+      
+    }
+    .condition-row {
+      padding: 20px;
+    }
+
+    .search-score-btn{
+      padding: 20px;
+      text-align: center;
+      .btn-lg {
+        padding-right:20px;
+      }
+    }
+
   }
 }
 /*教师风采*/
