--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="navbar-fixed" align="center">
-  <div class="footer-content">
+  <div class="footer-content text-center">
     <p>关于我门 | 联系我们</p>
     <p>Copyright©2015 上海大唐移动通信设备公司</p>
   </div>
